docs: :memo: add example to swagger doc
