# data/http/user-controller.go
@@ -19,36 +19,29 @@ func NewUserController(userUseCase usecases.UserUseCase) UserController {
 	}
 }
 
-// @Summary Create a new user
-// @Description Create a new user with the provided data
-// @Accept json
-// @Produce json
-// @Param user body object true "User object to be created"
-// @Param email body string true "Email address" format(email) example(email@email.com)
-// @Param password body string true "User Password (8-32 characters, at least one uppercase letter, one lowercase letter, one number and one special character)" example(Password123!)
-// @Param fullName body string true "Full name of the user" example("Só Mais Silva")
-// @Success 201 {string} string "User created successfully"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
+// @Param user body CreateUserDTO true "User object to be created"
 // @Router /users [post]
+// @Success 201 {object} Response "User created successfully" {"message": "User created successfully"}
+// @Failure 400 {object} Response "Bad Request" {"message": "Bad Request"}
+// @Failure 500 {object} Response "Internal Server Error" {"message": "Internal Server Error"}
 func (u UserController) CreateUser(c *gin.Context) {
 	var user entities.User
 	err := c.ShouldBind(&user)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server error"})
+		c.JSON(http.StatusInternalServerError, gin.H{"message": "Internal Server error"})
 		return
 	}
 
 	newUser, err := entities.NewUser(user)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
 		return
 	}
 	newUser.ID = uuid.New().String()
 
 	err = u.userUseCase.CreateUser(newUser)
 	if err != nil {
-		c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+		c.JSON(http.StatusConflict, gin.H{"message": err.Error()})
 		return
 	}
 
